@@ -119,4 +119,11 @@ class RecipesControllerTest < Test::Unit::TestCase
     assert_redirected_to recipes_path
   end
   
+  def test_should_preview_the_recipe
+    @user = admin_login
+    
+    xhr :get, :preview, :recipe => {:body => @recipe.body}
+    assert_select_rjs :replace_html, "preview"
+  end
+  
 end
